# Projects

./: Cinema.sql
CSharp_Matches/: LabCSharp.sln  Program.cs  activePlayers.txt  matches.txt  players.txt
CSharp_Matches/domain/: ActivePlayer.cs  Entity.cs  EntityFromFile.cs  Match.cs  Player.cs  Student.cs  Team.cs
CSharp_Matches/repository/FileRepo/: ActivePlayersFileRepo.cs  FileRepository.cs  MatchFileRepo.cs  PlayersFileRepo.cs  StudentsFileRepo.cs
CSharp_Matches/repository/MemoryRepo/: InMemoryRepository.cs  Repository.cs
CSharp_Matches/service/: Service.cs
CSharp_Matches/ui/: UI.cs
CSharp_Matches/validators/: ActivePlayerValidator.cs  MatchValidator.cs  PlayerValidator.cs  StudentValidator.cs  TeamValidator.cs  ValidationException.cs  Validators.cs
Databases/: CinemInAerLiber.sql  Lab5IndexDaiana.sql  Proceduri.sql  TestView.sql
Movies OOP/: CMakeLists.txt  Console.cpp  Console.h  FilmeRepo.cpp  FilmeRepo.h  FilmeServ.cpp  FilmeServ.h  Lab10OOP.cpp  Lab10OOP.h  MyTableModel.h  Observer.h  Undo.h  filme.cpp  filme.h  main.cpp  teste.cpp  teste.h
PROIECT RPA/BlankProcess/: Invoices_2023.xlsx  Main.xaml  Main2.xaml  ProcessData.xaml  mergeCells.vbs  project.json
SocialNetwork-JavaFx/: build.gradle  settings.gradle
SocialNetwork-JavaFx/src/main/java/: module-info.java
SocialNetwork-JavaFx/src/main/java/social_network/Observer/: Observable.java  Observer.java
SocialNetwork-JavaFx/src/main/java/social_network/Validators/: BaseValidator.java  FriendshipValidator.java  UserValidator.java  Validator.java  ValidatorFactory.java  ValidatorType.java
(+38 files in other folders)
